updated client-side view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,3 +10,10 @@ form{
     margin:20px auto;
     padding: 20px;
 }
+
+div input[type="radio"]:checked + label {
+    font-weight: bold; /
+}
+
+
+
